0.0.8 fix main page overflow

--- a/src/pages/splash-screen/splash-screen-page.css
+++ b/src/pages/splash-screen/splash-screen-page.css
@@ -20,9 +20,9 @@ splash-screen-page #title {
   flex: 1;
   display:flex;
   flex-direction: column;
-  font-size: 20vw;
-  line-height: 20vw;
-  min-height: 20vw;
+  font-size: 15vw;
+  line-height: 15vw;
+  min-height: 15vw;
   /* margin:auto; */
   /* padding:15px; */
   align-self: center;
@@ -43,10 +43,8 @@ splash-screen-page #title > div {
   /* align-items: center; */
 }
 
-
-
 splash-screen-page header {
-  flex: 1;
+  /* flex: 1; */
   background-color: inherit;
 }
 
@@ -68,7 +66,7 @@ splash-screen-page .acc-btn-big {
   /* display: flex; */
   align-self: center;
   /* align-content: center; */
-  height: 20vw;
+  height: 15vw;
   width: 90vw;
   max-width: 100%;
   font-size: 5vh;
